--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,20 +1,22 @@
 @import 'inspector';
 
 .game {
-  display: flex;
-
-  &__view {
-    flex: 1;
-    background-color: azure;
-
-    canvas {
-      margin: 0 auto;
-      display: block;
+    @media screen and (min-width: 820px) {
+        display: flex;
     }
-  }
 
-  &__inspector {
-    flex: 1;
-    background-color: beige;
-  }
+    &__view {
+        flex: 1;
+        background-color: azure;
+
+        canvas {
+            margin: 0 auto;
+            display: block;
+        }
+    }
+
+    &__inspector {
+        flex: 1;
+        background-color: beige;
+    }
 }
