--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,6 +7,18 @@
 
     &__view {
         flex: 1;
+    }
+
+    &__scene {
+        background-color: azure;
+
+        canvas {
+            margin: 0 auto;
+            display: block;
+        }
+    }
+
+    &__physics {
         background-color: azure;
 
         canvas {
