--- a/src/style/inspector.scss
+++ b/src/style/inspector.scss
@@ -30,3 +30,10 @@
         }
     }
 }
+
+.component-list {
+    &__item {
+        background-color: antiquewhite;
+        margin: 0 0 10px 0;
+    }
+}
